--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
